// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Layout Component should render step 1 correctly 1`] = `
<DocumentFragment>
  <main
    class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 jHdwJw"
    role="main"
  >
    <div>
      <div>
        <div>
          <div
            class="LargeLogo__LogoWrapper-sc-1bu4w53-0 hBpxrf"
          >
            <a
              href="/"
            />
          </div>
          <div>
            <form
              class="SignupMainForm__SignupForm-sc-18p437d-0 dqTyyP"
              method="post"
            >
              <div>
                <span>
                  Sign up to see photos and videos from your friends.
                </span>
              </div>
              <div
                style="margin-top: -5px;"
              >
                <div>
                  <button
                    class="LoginWithFB__LoginWithFBButton-sc-18oes83-0 eSywRS"
                  >
                    <span />
                    Login in with Facebook
                  </button>
                  <div>
                    <div>
                      <div />
                      <div>
                        OR
                      </div>
                      <div />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                    maxlength="255"
                    name="emailOrPhone"
                    placeholder="Phone Number or Email"
                    value=""
                  />
                </label>
              </div>
              <div
                class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                    maxlength="255"
                    name="fullName"
                    placeholder="Full Name"
                    value=""
                  />
                </label>
              </div>
              <div
                class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                    maxlength="255"
                    name="userName"
                    placeholder="Username"
                    value=""
                  />
                </label>
              </div>
              <div
                class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                    maxlength="255"
                    name="password"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div>
                By signing up, you agree to our Terms, Privacy Policy and Cookies Policy.
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
                data-testid="submit-signupmain"
                disabled=""
                type="button"
              >
                Sign Up
              </button>
            </form>
          </div>
        </div>
        <div
          style="padding: 20px 0px;"
        >
          Have an account? 
          <a
            class="StyledLink__StyledLinkWrapper-sc-1rgr01q-0 dLJqDG"
            href="/login"
          >
            Log In
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Signup Layout Component should render step 2 correctly 1`] = `
<DocumentFragment>
  <main
    class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 jHdwJw"
    role="main"
  >
    <div>
      <div>
        <div>
          <div
            class="BirthdayForm__FormWrapper-sc-v8u5y9-0 BirthdayForm__MainFormWrapper-sc-v8u5y9-1 fXyRxn hXXAin"
          >
            <span
              class="BirthdayForm__BirthdayImage-sc-v8u5y9-2 hXFvVT"
            />
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
              style="margin-top: 16px;"
            >
              <span
                class="BirthdayForm__Text-sc-v8u5y9-4 cjWwTN"
                style="font-weight: 600;"
              >
                Add Your Birthday
              </span>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
              style="margin-top: 16px;"
            >
              <span
                class="BirthdayForm__Text-sc-v8u5y9-4 cjWwTN"
              >
                This won't be a part of your public profile.
              </span>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
            >
              <button
                class="BirthdayForm__TextButton-sc-v8u5y9-7 imXLDU"
              >
                Why do I need to provide my birthday?
              </button>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
              style="margin-top: 12px;"
            >
              <div>
                <div
                  class="BirthdayForm__FormWrapper-sc-v8u5y9-0 fXyRxn"
                >
                  <span>
                    <span
                      class="BirthdayForm__InputWrapper-sc-v8u5y9-8 hmkNWa"
                    >
                      <select
                        class="BirthdayForm__InputSelect-sc-v8u5y9-9 gpmXBY"
                        name="month"
                        title="Month"
                      >
                        <option
                          title="January"
                          value="1"
                        >
                          January
                        </option>
                        <option
                          title="February"
                          value="2"
                        >
                          February
                        </option>
                        <option
                          title="March"
                          value="3"
                        >
                          March
                        </option>
                        <option
                          title="April"
                          value="4"
                        >
                          April
                        </option>
                        <option
                          title="May"
                          value="5"
                        >
                          May
                        </option>
                        <option
                          title="June"
                          value="6"
                        >
                          June
                        </option>
                        <option
                          title="July"
                          value="7"
                        >
                          July
                        </option>
                        <option
                          title="August"
                          value="8"
                        >
                          August
                        </option>
                        <option
                          title="September"
                          value="9"
                        >
                          September
                        </option>
                        <option
                          title="October"
                          value="10"
                        >
                          October
                        </option>
                        <option
                          title="November"
                          value="11"
                        >
                          November
                        </option>
                        <option
                          title="December"
                          value="12"
                        >
                          December
                        </option>
                      </select>
                    </span>
                    <span
                      class="BirthdayForm__InputWrapper-sc-v8u5y9-8 hmkNWa"
                    >
                      <select
                        class="BirthdayForm__InputSelect-sc-v8u5y9-9 gpmXBY"
                        name="day"
                        title="Day"
                      >
                        <option
                          title="1"
                          value="1"
                        >
                          1
                        </option>
                        <option
                          title="2"
                          value="2"
                        >
                          2
                        </option>
                        <option
                          title="3"
                          value="3"
                        >
                          3
                        </option>
                        <option
                          title="4"
                          value="4"
                        >
                          4
                        </option>
                        <option
                          title="5"
                          value="5"
                        >
                          5
                        </option>
                        <option
                          title="6"
                          value="6"
                        >
                          6
                        </option>
                        <option
                          title="7"
                          value="7"
                        >
                          7
                        </option>
                        <option
                          title="8"
                          value="8"
                        >
                          8
                        </option>
                        <option
                          title="9"
                          value="9"
                        >
                          9
                        </option>
                        <option
                          title="10"
                          value="10"
                        >
                          10
                        </option>
                        <option
                          title="11"
                          value="11"
                        >
                          11
                        </option>
                        <option
                          title="12"
                          value="12"
                        >
                          12
                        </option>
                        <option
                          title="13"
                          value="13"
                        >
                          13
                        </option>
                        <option
                          title="14"
                          value="14"
                        >
                          14
                        </option>
                        <option
                          title="15"
                          value="15"
                        >
                          15
                        </option>
                        <option
                          title="16"
                          value="16"
                        >
                          16
                        </option>
                        <option
                          title="17"
                          value="17"
                        >
                          17
                        </option>
                        <option
                          title="18"
                          value="18"
                        >
                          18
                        </option>
                        <option
                          title="19"
                          value="19"
                        >
                          19
                        </option>
                        <option
                          title="20"
                          value="20"
                        >
                          20
                        </option>
                        <option
                          title="21"
                          value="21"
                        >
                          21
                        </option>
                        <option
                          title="22"
                          value="22"
                        >
                          22
                        </option>
                        <option
                          title="23"
                          value="23"
                        >
                          23
                        </option>
                        <option
                          title="24"
                          value="24"
                        >
                          24
                        </option>
                        <option
                          title="25"
                          value="25"
                        >
                          25
                        </option>
                        <option
                          title="26"
                          value="26"
                        >
                          26
                        </option>
                        <option
                          title="27"
                          value="27"
                        >
                          27
                        </option>
                        <option
                          title="28"
                          value="28"
                        >
                          28
                        </option>
                        <option
                          title="29"
                          value="29"
                        >
                          29
                        </option>
                        <option
                          title="30"
                          value="30"
                        >
                          30
                        </option>
                        <option
                          title="31"
                          value="31"
                        >
                          31
                        </option>
                      </select>
                    </span>
                    <span
                      class="BirthdayForm__InputWrapper-sc-v8u5y9-8 hmkNWa"
                    >
                      <select
                        class="BirthdayForm__InputSelect-sc-v8u5y9-9 gpmXBY"
                        name="year"
                        title="Year"
                      >
                        <option
                          title="2024"
                          value="2024"
                        >
                          2024
                        </option>
                        <option
                          title="2023"
                          value="2023"
                        >
                          2023
                        </option>
                        <option
                          title="2022"
                          value="2022"
                        >
                          2022
                        </option>
                        <option
                          title="2021"
                          value="2021"
                        >
                          2021
                        </option>
                        <option
                          title="2020"
                          value="2020"
                        >
                          2020
                        </option>
                        <option
                          title="2019"
                          value="2019"
                        >
                          2019
                        </option>
                        <option
                          title="2018"
                          value="2018"
                        >
                          2018
                        </option>
                        <option
                          title="2017"
                          value="2017"
                        >
                          2017
                        </option>
                        <option
                          title="2016"
                          value="2016"
                        >
                          2016
                        </option>
                        <option
                          title="2015"
                          value="2015"
                        >
                          2015
                        </option>
                        <option
                          title="2014"
                          value="2014"
                        >
                          2014
                        </option>
                        <option
                          title="2013"
                          value="2013"
                        >
                          2013
                        </option>
                        <option
                          title="2012"
                          value="2012"
                        >
                          2012
                        </option>
                        <option
                          title="2011"
                          value="2011"
                        >
                          2011
                        </option>
                        <option
                          title="2010"
                          value="2010"
                        >
                          2010
                        </option>
                        <option
                          title="2009"
                          value="2009"
                        >
                          2009
                        </option>
                        <option
                          title="2008"
                          value="2008"
                        >
                          2008
                        </option>
                        <option
                          title="2007"
                          value="2007"
                        >
                          2007
                        </option>
                        <option
                          title="2006"
                          value="2006"
                        >
                          2006
                        </option>
                        <option
                          title="2005"
                          value="2005"
                        >
                          2005
                        </option>
                        <option
                          title="2004"
                          value="2004"
                        >
                          2004
                        </option>
                        <option
                          title="2003"
                          value="2003"
                        >
                          2003
                        </option>
                        <option
                          title="2002"
                          value="2002"
                        >
                          2002
                        </option>
                        <option
                          title="2001"
                          value="2001"
                        >
                          2001
                        </option>
                        <option
                          title="2000"
                          value="2000"
                        >
                          2000
                        </option>
                        <option
                          title="1999"
                          value="1999"
                        >
                          1999
                        </option>
                        <option
                          title="1998"
                          value="1998"
                        >
                          1998
                        </option>
                        <option
                          title="1997"
                          value="1997"
                        >
                          1997
                        </option>
                        <option
                          title="1996"
                          value="1996"
                        >
                          1996
                        </option>
                        <option
                          title="1995"
                          value="1995"
                        >
                          1995
                        </option>
                        <option
                          title="1994"
                          value="1994"
                        >
                          1994
                        </option>
                        <option
                          title="1993"
                          value="1993"
                        >
                          1993
                        </option>
                        <option
                          title="1992"
                          value="1992"
                        >
                          1992
                        </option>
                        <option
                          title="1991"
                          value="1991"
                        >
                          1991
                        </option>
                        <option
                          title="1990"
                          value="1990"
                        >
                          1990
                        </option>
                        <option
                          title="1989"
                          value="1989"
                        >
                          1989
                        </option>
                        <option
                          title="1988"
                          value="1988"
                        >
                          1988
                        </option>
                        <option
                          title="1987"
                          value="1987"
                        >
                          1987
                        </option>
                        <option
                          title="1986"
                          value="1986"
                        >
                          1986
                        </option>
                        <option
                          title="1985"
                          value="1985"
                        >
                          1985
                        </option>
                        <option
                          title="1984"
                          value="1984"
                        >
                          1984
                        </option>
                        <option
                          title="1983"
                          value="1983"
                        >
                          1983
                        </option>
                        <option
                          title="1982"
                          value="1982"
                        >
                          1982
                        </option>
                        <option
                          title="1981"
                          value="1981"
                        >
                          1981
                        </option>
                        <option
                          title="1980"
                          value="1980"
                        >
                          1980
                        </option>
                        <option
                          title="1979"
                          value="1979"
                        >
                          1979
                        </option>
                        <option
                          title="1978"
                          value="1978"
                        >
                          1978
                        </option>
                        <option
                          title="1977"
                          value="1977"
                        >
                          1977
                        </option>
                        <option
                          title="1976"
                          value="1976"
                        >
                          1976
                        </option>
                        <option
                          title="1975"
                          value="1975"
                        >
                          1975
                        </option>
                        <option
                          title="1974"
                          value="1974"
                        >
                          1974
                        </option>
                        <option
                          title="1973"
                          value="1973"
                        >
                          1973
                        </option>
                        <option
                          title="1972"
                          value="1972"
                        >
                          1972
                        </option>
                        <option
                          title="1971"
                          value="1971"
                        >
                          1971
                        </option>
                        <option
                          title="1970"
                          value="1970"
                        >
                          1970
                        </option>
                        <option
                          title="1969"
                          value="1969"
                        >
                          1969
                        </option>
                        <option
                          title="1968"
                          value="1968"
                        >
                          1968
                        </option>
                        <option
                          title="1967"
                          value="1967"
                        >
                          1967
                        </option>
                        <option
                          title="1966"
                          value="1966"
                        >
                          1966
                        </option>
                        <option
                          title="1965"
                          value="1965"
                        >
                          1965
                        </option>
                        <option
                          title="1964"
                          value="1964"
                        >
                          1964
                        </option>
                        <option
                          title="1963"
                          value="1963"
                        >
                          1963
                        </option>
                        <option
                          title="1962"
                          value="1962"
                        >
                          1962
                        </option>
                        <option
                          title="1961"
                          value="1961"
                        >
                          1961
                        </option>
                        <option
                          title="1960"
                          value="1960"
                        >
                          1960
                        </option>
                        <option
                          title="1959"
                          value="1959"
                        >
                          1959
                        </option>
                        <option
                          title="1958"
                          value="1958"
                        >
                          1958
                        </option>
                        <option
                          title="1957"
                          value="1957"
                        >
                          1957
                        </option>
                        <option
                          title="1956"
                          value="1956"
                        >
                          1956
                        </option>
                        <option
                          title="1955"
                          value="1955"
                        >
                          1955
                        </option>
                        <option
                          title="1954"
                          value="1954"
                        >
                          1954
                        </option>
                        <option
                          title="1953"
                          value="1953"
                        >
                          1953
                        </option>
                        <option
                          title="1952"
                          value="1952"
                        >
                          1952
                        </option>
                        <option
                          title="1951"
                          value="1951"
                        >
                          1951
                        </option>
                        <option
                          title="1950"
                          value="1950"
                        >
                          1950
                        </option>
                        <option
                          title="1949"
                          value="1949"
                        >
                          1949
                        </option>
                        <option
                          title="1948"
                          value="1948"
                        >
                          1948
                        </option>
                        <option
                          title="1947"
                          value="1947"
                        >
                          1947
                        </option>
                        <option
                          title="1946"
                          value="1946"
                        >
                          1946
                        </option>
                        <option
                          title="1945"
                          value="1945"
                        >
                          1945
                        </option>
                        <option
                          title="1944"
                          value="1944"
                        >
                          1944
                        </option>
                        <option
                          title="1943"
                          value="1943"
                        >
                          1943
                        </option>
                        <option
                          title="1942"
                          value="1942"
                        >
                          1942
                        </option>
                        <option
                          title="1941"
                          value="1941"
                        >
                          1941
                        </option>
                        <option
                          title="1940"
                          value="1940"
                        >
                          1940
                        </option>
                        <option
                          title="1939"
                          value="1939"
                        >
                          1939
                        </option>
                        <option
                          title="1938"
                          value="1938"
                        >
                          1938
                        </option>
                        <option
                          title="1937"
                          value="1937"
                        >
                          1937
                        </option>
                        <option
                          title="1936"
                          value="1936"
                        >
                          1936
                        </option>
                        <option
                          title="1935"
                          value="1935"
                        >
                          1935
                        </option>
                        <option
                          title="1934"
                          value="1934"
                        >
                          1934
                        </option>
                        <option
                          title="1933"
                          value="1933"
                        >
                          1933
                        </option>
                        <option
                          title="1932"
                          value="1932"
                        >
                          1932
                        </option>
                        <option
                          title="1931"
                          value="1931"
                        >
                          1931
                        </option>
                        <option
                          title="1930"
                          value="1930"
                        >
                          1930
                        </option>
                        <option
                          title="1929"
                          value="1929"
                        >
                          1929
                        </option>
                        <option
                          title="1928"
                          value="1928"
                        >
                          1928
                        </option>
                        <option
                          title="1927"
                          value="1927"
                        >
                          1927
                        </option>
                        <option
                          title="1926"
                          value="1926"
                        >
                          1926
                        </option>
                        <option
                          title="1925"
                          value="1925"
                        >
                          1925
                        </option>
                        <option
                          title="1924"
                          value="1924"
                        >
                          1924
                        </option>
                        <option
                          title="1923"
                          value="1923"
                        >
                          1923
                        </option>
                        <option
                          title="1922"
                          value="1922"
                        >
                          1922
                        </option>
                        <option
                          title="1921"
                          value="1921"
                        >
                          1921
                        </option>
                        <option
                          title="1920"
                          value="1920"
                        >
                          1920
                        </option>
                        <option
                          title="1919"
                          value="1919"
                        >
                          1919
                        </option>
                        <option
                          title="1918"
                          value="1918"
                        >
                          1918
                        </option>
                        <option
                          title="1917"
                          value="1917"
                        >
                          1917
                        </option>
                        <option
                          title="1916"
                          value="1916"
                        >
                          1916
                        </option>
                        <option
                          title="1915"
                          value="1915"
                        >
                          1915
                        </option>
                        <option
                          title="1914"
                          value="1914"
                        >
                          1914
                        </option>
                        <option
                          title="1913"
                          value="1913"
                        >
                          1913
                        </option>
                        <option
                          title="1912"
                          value="1912"
                        >
                          1912
                        </option>
                        <option
                          title="1911"
                          value="1911"
                        >
                          1911
                        </option>
                        <option
                          title="1910"
                          value="1910"
                        >
                          1910
                        </option>
                        <option
                          title="1909"
                          value="1909"
                        >
                          1909
                        </option>
                        <option
                          title="1908"
                          value="1908"
                        >
                          1908
                        </option>
                        <option
                          title="1907"
                          value="1907"
                        >
                          1907
                        </option>
                        <option
                          title="1906"
                          value="1906"
                        >
                          1906
                        </option>
                        <option
                          title="1905"
                          value="1905"
                        >
                          1905
                        </option>
                      </select>
                    </span>
                  </span>
                  <div
                    class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
                    style="margin-top: 4px; margin-bottom: 8px;"
                  >
                    <div
                      class="BirthdayForm__Text2-sc-v8u5y9-5 gdQkjB"
                    >
                      You need to enter the date you were born
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
            >
              <div
                class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
                style="margin-bottom: 8px; margin-top: 8px;"
              >
                <span
                  class="BirthdayForm__Text3-sc-v8u5y9-6 fjxFkW"
                >
                  Use your own birthday, even if this account is for a business, a pet, or something else
                </span>
              </div>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
              style="width: 100%; padding: 16px 8px 16px 8px;"
            >
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
                data-testid="submit-signupbday"
                disabled=""
                style="margin: 0px;"
                type="button"
              >
                Next
              </button>
            </div>
            <div
              class="BirthdayForm__Section-sc-v8u5y9-3 bgngtM"
            >
              <button
                class="BirthdayForm__BackButton-sc-v8u5y9-10 fXBSvs"
              >
                Go Back
              </button>
            </div>
          </div>
        </div>
        <div
          style="padding: 20px 0px;"
        >
          Have an account? 
          <a
            class="StyledLink__StyledLinkWrapper-sc-1rgr01q-0 dLJqDG"
            href="/login"
          >
            Log In
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Signup Layout Component should render step 3 correctly 1`] = `
<DocumentFragment>
  <main
    class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 jHdwJw"
    role="main"
  >
    <div>
      <div>
        <div>
          <div
            class="ConfirmationCodeForm__ConfirmationWrapper-sc-1ois2aw-0 efWDGZ"
            style="align-items: center;"
          >
            <span
              aria-label="Email Confirmation"
              class="ConfirmationCodeForm__EmailImage-sc-1ois2aw-1 cyVRga"
            />
            <div
              class="ConfirmationCodeForm__ConfirmationInnerWrapper-sc-1ois2aw-2 jZUObA"
            >
              <span
                class="ConfirmationCodeForm__Text-sc-1ois2aw-3 eactoZ"
                style="font-weight: 600; margin: 0px;"
              >
                Enter Confirmation Code
              </span>
            </div>
            <div
              class="ConfirmationCodeForm__ConfirmationInnerWrapper-sc-1ois2aw-2 jZUObA"
            >
              <span
                class="ConfirmationCodeForm__Text-sc-1ois2aw-3 eactoZ"
                style="max-width: 100%;"
              >
                Enter the confirmation code we sent to .
                <button
                  class="ConfirmationCodeForm__ResendButton-sc-1ois2aw-4 dvbEtO"
                >
                  Resend Code
                </button>
              </span>
            </div>
          </div>
          <div
            class="ConfirmationCodeForm__ConfirmationWrapper-sc-1ois2aw-0 efWDGZ"
          >
            <div
              class="ConfirmationCodeForm__ConfirmationInnerWrapper-sc-1ois2aw-2 jZUObA"
              style="align-items: center; margin: 8px 0px; padding: 0px 40px;"
            >
              <div
                class="ConfirmationCodeForm__ConfirmationWrapper-sc-1ois2aw-0 efWDGZ"
                style="margin: 0px; padding: 0px;"
              >
                <div
                  class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                      maxlength="8"
                      name="confirmationCode"
                      placeholder="Confirmation Code"
                      style="border-radius: 6px; cursor: text; line-height: 30px; padding: 0px 12px; text-align: left; text-transform: none; width: 240px;"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
              <div
                class="ConfirmationCodeForm__ConfirmationWrapper-sc-1ois2aw-0 efWDGZ"
                style="width: 100%; margin: 0px; padding: 16px 8px 16px 8px;"
              >
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
                  data-testid="submit-signupconfirm"
                  disabled=""
                  style="margin: 0px;"
                  type="button"
                >
                  Next
                </button>
              </div>
              <div
                class="ConfirmationCodeForm__ConfirmationInnerWrapper-sc-1ois2aw-2 jZUObA"
                style="margin: 0px;"
              >
                <button
                  class="ConfirmationCodeForm__PrevButton-sc-1ois2aw-5 hihaLz"
                >
                  Go Back
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          style="padding: 20px 0px;"
        >
          Have an account? 
          <a
            class="StyledLink__StyledLinkWrapper-sc-1rgr01q-0 dLJqDG"
            href="/login"
          >
            Log In
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
